apps/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: string-is
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: string-is
  namespace: string-is
spec:
  replicas: 1
  selector:
    matchLabels:
      app: string-is      
  template:
    metadata:
      labels:
        app: string-is
    spec:
      containers:
      - name: gowakandabuy
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
            name: http
        image: daveperrett/string-is:latest
---
apiVersion: v1
kind: Service
metadata:
  name: string-is
  namespace: string-is
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: string-is
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: string-is
  namespace: string-is
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`string-is.lab-k0s.ourlab.cc`)
      services:
        - name: string-is
          port: 3000
